NEXT:

e2factory-2.3.4
 * version information for plugins is displayed now when requested
 * configuration file setting in .e2/e2config is honoured in e2-install-e2
   now
 * bugs and documentation issues in e2-new-source were fixed
 * the plugin interface was extended to permit plugins to register
   commandline options and permit tool specific initialization of plugins
 * a serious bug in the hashcache was fixed. The buildid calculation
   used outdated hash of files from the project tree.
 * the username is included in the chroot environment path again
 * the plugin interface was extended to allow plugins to change the
   way dependencies are processed into the build order
 * bugs were fixed
 * compressed build log is stored within the result packages
 * bugs were fixed
 * a plugin interface was introduced. Local code is capable of loading
   plugins and some initial interfaces are available with this release.
 * the environment related code was rewritten in a far more robust way.
   This fixes a few bugs: Missing environment files were silently ignored,
   and adding result specific environment could change the id of the
   global environment (not the environment itself) due to lua table behaviour.
 * the cache module was turned into a true lua module.
 * a design flaw in the cache module was fixed that lead to incorrect
   caching for the builtin proj-storage server. Caching was disabled due
   to this problem in the default configuration and is enabled now.
 * support for per-project caches (using the %l format) in e2.conf is
   no longer available. Cache is designed to be per user.
 * the global interface version is no longer maintained in the file
   .e2/version inside the project. Instead ./version on the server side
   remains the only permanent copy and it is fetched to .e2/global-version
   in the project environment
 * the local tools check for their own support for the global interface
   version in use.
 * a few minor bugs were fixed